--- a/app/style.css
+++ b/app/style.css
@@ -14,6 +14,23 @@ code.language-cpp{
     color: white;
 }
 
+#configForm {
+    color: black;
+}
+
+#connectCtn {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loadingGif {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+}
+
 #readme{
 text-align: left;
 }
